[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/weapons/GunBaseScript.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Effects/MFlash.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "MuzzleFlash"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("../RifleBase/mfSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="gunBase" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 8
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="muzzlePoint" type="Position2D" parent="."]

[node name="gunSoundStream" type="AudioStreamPlayer2D" parent="muzzlePoint"]

[node name="muzzleFlashSprite" type="Sprite" parent="muzzlePoint"]
visible = false
position = Vector2( 39.975, -6.1653 )
texture = ExtResource( 2 )
vframes = 4
frame = 3

[node name="animPlayer" type="AnimationPlayer" parent="."]
anims/MuzzleFlash = SubResource( 2 )

[node name="ejectPoint" type="Position2D" parent="."]
